--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
-<a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a>
-{{ twitter | safe }}
+<ul class="menu">
+<li><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></li>
+<li>{{ twitter | safe }}</li>
+</ul>
 </body>
 </html>
