--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,14 @@
 <ul class=menu><li>{{ twitter | safe }}</li></ul>
 <p>Welcome, {{ username }}!</p>
 <form method=post action="/update">
-<ul>
-<li>Category: <input name=category size=50></li>
-<li>Stream title: <input name=title size=50></li>
-<li>Communities: <input name=comm1 size=50><br>
-<input name=comm2 size=50><br>
-<input name=comm3 size=50><br>
-</ul>
-<input type=submit>
+<table>
+<tr><td><label for=category>Category:</label></td><td><input name=category size=50></td></tr>
+<tr><td><label for=title>Stream title:</label></td><td><input name=title size=50></td></tr>
+<tr><td><label for=comm1>Communities:</label></td><td><input name=comm1 size=50></td></tr>
+<tr><td></td><td><input name=comm2 size=50></td></tr>
+<tr><td></td><td><input name=comm3 size=50></td></tr>
+</table>
+<input type=submit value="Update stream info">
 <script>
 const channel = {{ channel | safe }};
 const communities = {{ commnames | safe }};
@@ -26,8 +26,7 @@ communities.forEach((c, i) => form["comm"+(i+1)].value = c);
 </script>
 </form>
 <form method=post action="/tweet">
-<p>Tweet that you're live: <input name=tweet size=50></p>
-<input type=submit>
+<p>Tweet that you're live: <input name=tweet size=50><input type=submit value="Tweet!"></p>
 </form>
 <p><a href="/logout">Logout</a></p>
 </body>
