--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,17 @@ const form = document.forms[0].elements;
 form.category.value = channel.game;
 form.title.value = channel.status;
 communities.forEach((c, i) => form["comm"+(i+1)].value = c);
+
+async function hello() {
+	const result = await (await fetch("/api/hello", {credentials: "include"})).json();
+	console.log(result);
+}
 </script>
 </form>
 <form method=post action="/tweet">
 <p><label>Tweet that you're live: <input name=tweet size=50></label><input type=submit value="Tweet!"></p>
 </form>
+<button type=button onclick="hello()">Hello, world</button>
 <p><a href="/logout">Logout</a></p>
 </body>
 </html>
