--- a/templates/index.html
+++ b/templates/index.html
@@ -107,5 +107,8 @@ async function delete_setup(i) {
 </form>
 <button type=button onclick="hello()">Hello, world</button>
 <p><a href="/logout">Logout</a></p>
+<ul>
+<li><a href="/mustard-backup.json">Backup/export settings</a></li>
+</ul>
 </body>
 </html>
