--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,15 @@ const checklist = {{ checklist | tojson }};
 </script>
 </head>
 <body>
-<ul class=menu><li>{{ twitter | safe }}</li></ul>
+
+<header>
+<!-- TODO: Have a logo or something -->
+<h1>Mustard Mine</h1>
 <p>Welcome, {{ username }}!</p>
+</header>
+
+<section>
+<h2>Stream setups</h2>
 <table border=1 id=setups></table>
 <form method=post action="/update">
 <table>
@@ -26,10 +33,18 @@ const checklist = {{ checklist | tojson }};
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
+</section>
+
+<section>
+<h2>Twitter</h2>
+<ul class=menu><li>{{ twitter | safe }}</li></ul>
 <form method=post action="/tweet">
 <p><label>Tweet that you're live: <input name=tweet id=tweet size=50></label><input type=submit value="Tweet!"></p>
 </form>
+</section>
+
 <section id=schedule>
+<h2>Schedule</h2>
 <p>Specify schedule in timezone: <input id=sched_tz size=40> <span id=othertz></span></p>
 <p>
 The schedule will be subject to the following rules:
@@ -43,15 +58,21 @@ The schedule will be subject to the following rules:
 <li>Basically, don't schedule stuff when DST is changing clocks. You'll probably be annoyed, and not just because of MM.
 </ul>
 </section>
+
 <section>
-<p>Personal checklist <a href="/checklist">[edit]</a></p>
+<h2>Personal checklist</h2>
+<p><a href="/checklist">[edit]</a></p>
 <ul id=checklist></ul>
 </section>
+
+<section>
+<h2>Administrivia</h2>
 <button type=button id=hello>Hello, world</button>
 <p><a href="/logout">Logout</a></p>
 <ul>
 <li><a href="/mustard-backup.json">Backup/export settings</a></li>
 </ul>
+</section>
 <script src="/static/mustard.js"></script>
 </body>
 </html>
