--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ const checklist = {{ checklist | tojson }};
 <section>
 <h2>Stream setups</h2>
 <table border=1 id=setups></table>
-<form method=post action="/update">
+<form name=setups method=post action="/update">
 <table>
 <tr><td><label for=category>Category:</label></td><td><input id=category name=category size=50></td></tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=50></td></tr>
