Implement saving of schedules

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@ const checklist = {{ checklist | tojson }};
 <section id=schedule>
 <h2>Schedule</h2>
 <form name=schedule method=post action="/schedule">
-<p>Specify schedule in timezone: <input id=sched_tz size=40> <span id=othertz></span></p>
+<p>Specify schedule in timezone: <input name=sched_tz size=40> <span id=othertz></span></p>
 <table>
 <tr><td><label for=sched0>Sun:</label></td><td><input class=sched name=sched0 size=20></td></tr>
 <tr><td><label for=sched1>Mon:</label></td><td><input class=sched name=sched1 size=20></td></tr>
@@ -56,6 +56,7 @@ const checklist = {{ checklist | tojson }};
 <tr><td><label for=sched5>Fri:</label></td><td><input class=sched name=sched5 size=20></td></tr>
 <tr><td><label for=sched6>Sat:</label></td><td><input class=sched name=sched6 size=20></td></tr>
 </table>
+<input type=submit value="Update schedule">
 </form>
 <p>
 The schedule will be subject to the following rules:
