--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,12 @@
+section {
+	border: 1px solid black;
+	padding: 10px;
+	margin: 10px 0;
+}
+h2 {
+	margin-top: 0;
+}
+
 #login-twitter {
 	background-color: #1DA1F2;
 }
