--- a/templates/index.html
+++ b/templates/index.html
@@ -75,12 +75,12 @@ The schedule will be subject to the following rules:
 
 <section>
 <h2>Timers</h2>
-<ul id=checklist>
-{% for id in timers %}
-<li><a href="/countdown/{{id}}" target="_new">{{id}}</a> | <a href="/timer/{{id}}">[edit]</a></li>
+<ul>
+{% for id, title in timers %}
+<li><a href="/countdown/{{id}}" target="_new">{{title or id}}</a> | <a href="/timer/{{id}}">[edit]</a></li>
 {% endfor-%}
 </ul>
-<form target="/countdown/new" method=post><input type=submit value="Create new timer"></form>
+<form action="/countdown/new" method=post><input type=submit value="Create new timer"></form>
 </section>
 
 <section>
