Change URL for timer creation ("countdown" is the live display only)

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@ The schedule will be subject to the following rules:
 <li><a href="/countdown/{{id}}" target="_new">{{title or id}}</a> | <a href="/timer/{{id}}">[edit]</a></li>
 {% endfor-%}
 </ul>
-<form action="/countdown/new" method=post><input type=submit value="Create new timer"></form>
+<form action="/timer/new" method=post><input type=submit value="Create new timer"></form>
 </section>
 
 <section>
