--- a/templates/timer.html
+++ b/templates/timer.html
@@ -20,7 +20,7 @@
 <script>
 const info = {{ info | tojson }};
 const form = document.forms[0].elements;
-"title delta maxtype styling".split(" ").forEach(id => form[id].value = info[id]);
+"title delta maxtime styling".split(" ").forEach(id => form[id].value = info[id]);
 </script>
 </form>
 </body>
