--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -14,7 +14,7 @@ div {
 <div id=id>{{ id }}</div>
 <div id=time></div>
 <script>
-const target_time = {{ next_event }};
+const target_time = {{ next_event }} + {{ delta }};
 const maxtime = {{ maxtime }};
 const target = new Date(target_time * 1000);
 const display = document.getElementById("time")
