--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,8 @@ const checklist = {{ checklist | tojson }};
 <h2>Twitter</h2>
 <ul class=menu><li>{{ twitter | safe }}</li></ul>
 <form method=post action="/tweet">
-<p><label>Tweet that you're live: <input name=tweet id=tweet size=100></label><input type=submit value="Tweet!"><span id=tweetlen></span></p>
+<p><label>Tweet that you're live: <input name=tweet id=tweet size=100></label><span id=tweetlen></span></p>
+<p><input type=submit value="Tweet!"></p>
 </form>
 </section>
 
