--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,14 @@ const checklist = {{ checklist | tojson }};
 <ul class=menu><li>{{ twitter | safe }}</li></ul>
 <form method=post action="/tweet">
 <p><label>Tweet that you're live: <input name=tweet id=tweet size=100></label><span id=tweetlen></span></p>
-<p><input type=submit value="Tweet!"></p>
+<p><select name=tweetschedule id=tweetschedule>
+<option value="now" selected>Now</option>
+<option value="0">At schedule</option>
+<option value="300">At T+5 mins</option>
+<option value="600">At T+10 mins</option>
+<option value="1800">At T+30 mins</option>
+</select>
+<input type=submit value="Tweet!"><span id=tweettime></span></p>
 </form>
 </section>
 
