Tweak display for clarity

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ const checklist = {{ checklist | tojson }};
 <option value="600">At T+10 mins</option>
 <option value="1800">At T+30 mins</option>
 </select>
-<input type=submit value="Tweet!"><span id=tweettime></span></p>
+<input type=submit value="Tweet!"><span id=tweettime>Immediate</span></p>
 </form>
 </section>
 
