Caution users about custom timezones

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@ The schedule will be subject to the following rules:
 <li>The schedule repeats weekly. Everything is based on Sun/Mon/Tue etc.
 <li>On each day-of-week, you may have zero or more times. Each time is interpreted within the specified timezone.
 <li>Times can be entered with AM/PM and will be converted into 24-hour notation.
+<li>"Preview" times and countdowns on this dashboard may use your local time, ignoring the specified timezone. Don't worry, the real countdown will use the right timezone.
 <li>This info is not public, so there's no need to have a "vacation mode" etc. Just don't click the button to tell MM to do stuff.
 <li>If the time falls within a gap (eg when DST advances clocks), behaviour is undefined, but will probably pick one side or the other.
 <li>If the time falls within a fold (eg when DST retards clocks), the first available time will be used.
