Implement most of backup restoration

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,6 +114,7 @@ functionality behind it.</p>
 <button type=button id=hello>Hello, world</button>
 <ul>
 <li><a href="/mustard-backup.json">Backup/export settings</a></li>
+<li><form action="/restore-backup" enctype="multipart/form-data" method=post>Restore backup: <input type=file name=backup><input type=submit value="Submit"></form></li>
 </ul>
 <p><a href="/logout">Logout</a></p>
 </section>
