--- a/templates/timer.html
+++ b/templates/timer.html
@@ -13,7 +13,7 @@
 <tr><td><label for=delta>Delta</label></td><td><input name=delta id=delta size=10></td></tr>
 <tr><td><label for=maxtime>Max displayed time</label></td><td><input name=maxtime id=maxtime size=10></td></tr>
 </table>
-<p><label>Custom styling (advanced usage only)</label><br>
+<p><label>Custom styling (advanced usage only) (not currently supported)</label><br>
 <textarea name=styling rows=8 cols=50></textarea></p>
 
 <input type=submit value="Save">
