Implement a websocket framework (no functionality yet)

--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -31,6 +31,12 @@ function update() {
 	}
 }
 setInterval(update, 1000); update();
+
+const protocol = window.location.protocol == "https:" ? "wss://" : "ws://";
+const socket = new WebSocket(protocol + window.location.host + "/countdown_ctrl");
+function socksend(type, data) {socket.send(JSON.stringify({type, data}));}
+socket.onopen = () => {socksend("init", {id: "{{id}}"});};
+socket.onmessage = (ev) => {console.log("Message received:", ev.data);};
 </script>
 </body>
 </html>
