--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,7 @@ perfectly is even harder.)</li>
 <form action="/timer/new" method=post><input type=submit value="Create new timer"></form>
 <details><summary>Adjust timers</summary>
 <p><button class="timer-adjust" data-delta="60">+1 min</button> <button class="timer-adjust" data-delta="300">+5 min</button> <button class="timer-adjust" data-delta="900">+15 min</button></p>
+<p><button class="timer-adjust" data-delta="-60">-1 min</button> <button class="timer-adjust" data-delta="-300">-5 min</button> <button class="timer-adjust" data-delta="-900">-15 min</button></p>
 All timers will be instantly extended by the specified time.
 <p>Or set timer to this exact time: <input id=targettime size=5 placeholder="05:00"> <button id=set-timer>Set</button></p>
 </details>
