--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@ perfectly is even harder.)</li>
 <details><summary>Adjust timers</summary>
 <p><button class="timer-adjust" data-delta="60">+1 min</button> <button class="timer-adjust" data-delta="300">+5 min</button> <button class="timer-adjust" data-delta="900">+15 min</button></p>
 <p><button class="timer-adjust" data-delta="-60">-1 min</button> <button class="timer-adjust" data-delta="-300">-5 min</button> <button class="timer-adjust" data-delta="-900">-15 min</button></p>
-All timers will be instantly extended by the specified time.
+All timers will be instantly extended/shortened by the specified time.
 <p>Or set timer to this exact time: <button class="timer-force">5:00</button> <button class="timer-force">10:00</button>
 <input id=targettime size=5 placeholder="15:00"> <button id=set-timer>Set</button></p>
 </details>
