--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@ All timers will be instantly extended/shortened by the specified time.
 <div class="columns">
 <textarea name=checklist rows=10 cols=80>
 {{checklist}}
-</textarea> <!-- How many things can I call "checklist" without collisions? -->
+</textarea>
 <p style="flex: 1 0">Put important reminders here, one per line. You'll be able to check them off as you're
 preparing to go live, with one tick box per entry. Purely for your own use, has no actual
 functionality behind it.</p>
