Remove custom CSS from timers and make the titles clickable

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 <h1>Mustard Mine</h1>
-<p>Editing timer: {{ info["id"] }}</p>
+<p>Editing timer <a href="/countdown/{{info["id"]}}" target="_blank">{{info["id"]}}</a></p>
 <form method=post>
 <table>
 <tr><td><label for=title>Title</label></td><td><input name=title id=title size=40></td></tr>
 <tr><td><label for=delta>Delta</label></td><td><input name=delta id=delta size=10></td></tr>
 <tr><td><label for=maxtime>Max displayed time</label></td><td><input name=maxtime id=maxtime size=10></td></tr>
 </table>
+<!--
 <p><label>Custom styling (advanced usage only) (not currently supported)</label><br>
 <textarea name=styling rows=8 cols=50></textarea></p>
-
+-->
 <input type=submit value="Save">
 <script>
 const info = {{ info | tojson }};
