--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ const schedule = {{ schedule | tojson }};
 <table border=1 id=setups></table>
 <form name=setups method=post action="/update">
 <table>
-<tr><td><label for=category>Category:</label></td><td><input id=category name=category size=50></td></tr>
+<tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat>Pick</button></td></tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=75></td></tr>
 <tr><td><label for=comm1>Communities:</label></td><td><input id=comm1 name=comm1 size=50></td></tr>
 <tr><td></td><td><input name=comm2 size=50></td></tr>
@@ -32,6 +32,11 @@ const schedule = {{ schedule | tojson }};
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
+<div id=picker class=modal>
+<h3>Pick a category:</h3>
+<input id=picker_search size=30>
+<ul id=picker_results></ul>
+</div>
 </section>
 
 <section>
