Add a cancel button to the picker popup

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@ const schedule = {{ schedule | tojson }};
 <h3>Pick a category:</h3>
 <input id=picker_search size=30>
 <ul id=picker_results></ul>
+<button id=picker_cancel>Cancel</button>
 </div>
 </section>
 
