--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -18,20 +18,28 @@ div {
 let target_time = {{ next_event }} + {{ delta }};
 const maxtime = {{ maxtime }};
 let target = new Date(target_time * 1000);
-const display = document.getElementById("time")
+const display = document.getElementById("time");
 function update() {
 	const delay = Math.floor((target - new Date()) / 1000);
 	if (delay <= 0 || delay >= maxtime) {
 		display.innerHTML = "NOW";
 		display.classList.add("now");
+		set_delay(60000);
 	} else {
 		const min = Math.floor(delay / 60);
 		const sec = delay % 60;
 		display.innerHTML = min + ":" + ("0" + sec).slice(-2);
 		display.classList.remove("now");
+		set_delay(1000);
 	}
 }
-setInterval(update, 1000); update();
+let timer = null, delay = 0;
+function set_delay(wanted_delay) {
+	if (wanted_delay === delay) return;
+	if (timer) clearInterval(timer);
+	timer = setInterval(update, delay = wanted_delay);
+}
+update();
 
 const protocol = window.location.protocol == "https:" ? "wss://" : "ws://";
 const socket = new WebSocket(protocol + window.location.host + "/countdown_ctrl");
