Tweak the arrows a little

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,8 +132,8 @@ functionality behind it.</p>
 </section>
 
 <div id=pagination>
-<button id=prev_section>&lt;-</button>
-<button id=next_section>-&gt;</button>
+<button id=prev_section>↢</button>
+<button id=next_section>↣</button>
 </div>
 <script src="/static/mustard.js"></script>
 </body>
