--- a/templates/index.html
+++ b/templates/index.html
@@ -132,8 +132,7 @@ functionality behind it.</p>
 </section>
 
 <div id=pagination>
-<button id=prev_section>↢</button>
-<button id=next_section>↣</button>
+<button id=prev_section>↢</button> Sections <button id=next_section>↣</button>
 </div>
 <script src="/static/mustard.js"></script>
 </body>
