--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@ functionality behind it.</p>
 
 <section>
 <h2>Administrivia</h2>
-<button type=button id=hello>Hello, world</button>
+<!-- <button type=button id=hello>Hello, world</button> -->
 <ul>
 <li><a href="/mustard-backup.json">Backup/export settings</a></li>
 <li><form action="/restore-backup" enctype="multipart/form-data" method=post>Restore backup: <input type=file name=backup><input type=submit value="Submit"></form></li>
