Create a bit of a landing page (needs expansion still)

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,5 +9,17 @@
 <li><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></li>
 <li>{{ twitter | safe }}</li>
 </ul>
+<h1>Mustard Mine</h1>
+<p>
+The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and communities;
+schedule a tweet to be posted right as you go live; provide a countdown timer for use in OBS or other streaming
+software; and help you manage a checklist of important tasks. Mustard Mine will remember your "stream setups"
+(category, title, communities, and launch tweet), allowing you to easily select between different setups as you
+prepare for different types of streams - great when you have a varied schedule.
+</p>
+<p>
+To get started, log in with your Twitch credentials. Don't worry; Mustard Mine never sees your actual Twitch
+password.
+</p>
 </body>
 </html>
