Add a warning note that tags are not being set or viewed

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@ Scheduled tweet(s):
 <tr><td><label for=comm1>Communities:</label></td><td><input id=comm1 name=comm1 size=50></td></tr>
 <tr><td></td><td><input name=comm2 size=50></td></tr>
 <tr><td></td><td><input name=comm3 size=50></td></tr>
+<tr><td>Tags:</td><td>NOT YET SUPPORTED IN TWITCH API</td></tr>
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
