--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -64,6 +64,11 @@ socket.onmessage = (ev) => {
 		//That would allow the admin to say "okay now recalculate for a new event"
 	}
 };
+socket.onclose = ev => {
+	console.error("Socket closed:", ev.code, ev.reason);
+	if (ev.wasClean) console.info("Was a clean shutdown");
+	else console.error("Not a clean shutdown");
+};
 </script>
 </body>
 </html>
