--- a/templates/login.html
+++ b/templates/login.html
@@ -11,10 +11,10 @@
 </ul>
 <h1>Mustard Mine</h1>
 <p>
-The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and communities;
+The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and (eventually) tags;
 schedule a tweet to be posted right as you go live; provide a countdown timer for use in OBS or other streaming
 software; and help you manage a checklist of important tasks. Mustard Mine will remember your "stream setups"
-(category, title, communities, and launch tweet), allowing you to easily select between different setups as you
+(category, title, tags, and launch tweet), allowing you to easily select between different setups as you
 prepare for different types of streams - great when you have a varied schedule.
 </p>
 <p>
